add row to show and hide with email info when user clicks on mail icon

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
         </div>
     </div>
+    <div class = "row" id = "chat1">
+        Let's chat! E-mail: minori.fh@gmail.com
+    </div>
 
 </section>
 
