--- a/work.html
+++ b/work.html
@@ -34,6 +34,9 @@
                 <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
             </div>
         </div>
+        <div class = "row" id = "chat2">
+            Let's chat! E-mail: minori.fh@gmail.com
+        </div>
     </div>
 
     <div class = "column" id = "description-work">
@@ -136,6 +139,7 @@
 </section>
 
 <section id = "work2">
+UNDER CONSTRUCTION
 
 </section>
 <!-- Link to javascript -->
