add links to repo for each project

--- a/work.html
+++ b/work.html
@@ -69,6 +69,7 @@
                         <p>HANGMAN</p>
                         <p>javascript</p>
                         <a href = "https://minori-fh.github.io/Word-Guess-Game/">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/Word-Guess-Game">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -79,6 +80,7 @@
                         <p>EXPRESSFLIX</p>
                         <p>javascript+AJAX</p>
                         <a href = "https://minori-fh.github.io/giftastic/">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/giftastic">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -89,6 +91,7 @@
                         <p>POLYTOPIA</p>
                         <p>javascript</p>
                         <a href = "https://minori-fh.github.io/unit-4-game/">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/unit-4-game">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -108,6 +111,7 @@
                         <p>SIP</p>
                         <p>javascript+Firebase+AJAX</p>
                         <a href = "https://minori-fh.github.io/Sip/">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/Sip">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -118,6 +122,7 @@
                         <p>TRIVIA</p>
                         <p>javascript+timers</p>
                         <a href = "https://minori-fh.github.io/TriviaGame/">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/TriviaGame">SEE REPO</a>
                     </div>
                 </div>
             </div>
