--- a/work.html
+++ b/work.html
@@ -68,8 +68,8 @@
                     <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 5px;">
                         <p>HANGMAN</p>
                         <p>javascript</p>
-                        <a href = "https://minori-fh.github.io/Word-Guess-Game/">SEE SITE</a>
-                        <a href = "https://github.com/minori-fh/Word-Guess-Game">SEE REPO</a>
+                        <a href = "https://minori-fh.github.io/Word-Guess-Game/" target = "_blank">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/Word-Guess-Game" target = "_blank">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                     <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 5px;">
                         <p>EXPRESSFLIX</p>
                         <p>javascript+AJAX</p>
-                        <a href = "https://minori-fh.github.io/giftastic/">SEE SITE</a>
-                        <a href = "https://github.com/minori-fh/giftastic">SEE REPO</a>
+                        <a href = "https://minori-fh.github.io/giftastic/" target = "_blank">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/giftastic" target = "_blank">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -90,8 +90,8 @@
                     <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 5px;">
                         <p>POLYTOPIA</p>
                         <p>javascript</p>
-                        <a href = "https://minori-fh.github.io/unit-4-game/">SEE SITE</a>
-                        <a href = "https://github.com/minori-fh/unit-4-game">SEE REPO</a>
+                        <a href = "https://minori-fh.github.io/unit-4-game/" target = "_blank">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/unit-4-game" target = "_blank">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -110,8 +110,8 @@
                     <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 5px;">
                         <p>SIP</p>
                         <p>javascript+Firebase+AJAX</p>
-                        <a href = "https://minori-fh.github.io/Sip/">SEE SITE</a>
-                        <a href = "https://github.com/minori-fh/Sip">SEE REPO</a>
+                        <a href = "https://minori-fh.github.io/Sip/" target = "_blank">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/Sip" target = "_blank">SEE REPO</a>
                     </div>
                 </div>
             </div>
@@ -121,8 +121,8 @@
                     <div  class = "column project-subtitle" id = "trivia-links" style = "position: absolute; top: 5px;">
                         <p>TRIVIA</p>
                         <p>javascript+timers</p>
-                        <a href = "https://minori-fh.github.io/TriviaGame/">SEE SITE</a>
-                        <a href = "https://github.com/minori-fh/TriviaGame">SEE REPO</a>
+                        <a href = "https://minori-fh.github.io/TriviaGame/" target = "_blank">SEE SITE</a>
+                        <a href = "https://github.com/minori-fh/TriviaGame" target = "_blank">SEE REPO</a>
                     </div>
                 </div>
             </div>
