--- a/about-me.html
+++ b/about-me.html
@@ -37,6 +37,9 @@
                     <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
                 </div>
             </div>
+            <div class = "row" id = "chat3">
+                Let's chat! E-mail: minori.fh@gmail.com
+            </div>
         </div>
         <div class = "column" id = "description">
             <div class = "row" id = "button-row">
