add liri app picture and contents to work page

--- a/work.html
+++ b/work.html
@@ -126,9 +126,14 @@
                     </div>
                 </div>
             </div>
-            <div class = "column project">
+            <div class = "column project" id = "liri-col">
                 <div style = "position: relative;">
-                    <img src = "assets/images/underconstruction.png" width = "300px" height = "175px">
+                    <img src = "assets/images/liri.png" id = "liri" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "liri-links" style = "position: absolute; top: 5px;">
+                        <p>LIRI NODE APP</p>
+                        <p>node</p>
+                        <a href = "https://github.com/minori-fh/liri-node-app" target = "_blank">SEE REPO</a>
+                    </div>
                 </div>
             </div>
             <div class = "column project">
