Add ctext and image contents for second section of about me page

--- a/about-me.html
+++ b/about-me.html
@@ -47,7 +47,7 @@
             </div>
             <div class = "row" id = "self-description">
                 Hi, my name is Minori. <br>
-                I'm an ex-consultant turned dev. <br><br>
+                I'm a consultant turned full-stack developer! <br><br>
     
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
@@ -61,11 +61,49 @@
 
 
 <section id = "about-me2">
-UNDER CONSTRUCTION
 
+<section id = "about-me">
+    <div class = "row">
+        <div class = "column" id = "propic-column">
 
+        </div>
+        <div class = "column" id = "description">
+            <div class = "row" id = "button-row">
+                <a href = "index.html"><img src = "assets/images/house.png" id = "home1" class = "house" width = "30px"></a>
+            </div>
+            <div class = "row" id = "self-description2">
+                Currently: San Francisco <br>
+                Future: pending <br>
+                Move count: 9 <br><br><br><br>
 
+                I've gone through a lot of moves in my life, all of which have shaped me into who I am,
+                and each has led me to a variety of experiences, both personally and professionally! <br><Br>
 
+                I went to college in Boston and graduated with a Bachelors concentrating in finance and marketing.
+                My professional experiences range from working in the food industry to working for a top consulting firm. <br><br>
+
+                I always had a knack for creating things, whether it be CO2 dragsters or logos for companies during internships 
+                (because that gave me more excitement than crunching numbers in the financial statements). 
+                My most current role as an analytics consultant in the tech industry finally gave me the courage to dive into the deep end 
+                what I truly want to do, to *CREATE*! <br><br>
+
+                Current position: student at UC Berkeley Extensions - Full-stack Developer program, 
+                where I've been putting in a lot of hours and cups of coffee...
+            </div>
+            <div class = "row">
+                400 hours
+                <img src="assets/images/code.png" width="40px">
+
+                100 cups
+                <img src="assets/images/coffeeCup.png" width = "40px">
+            </div>
+            <div class = "row" id = "scroll-row1">
+                <img src = "assets/images/scrolldown.png" id = "scroll-down1" width = "50px">
+            </div>
+        </div>
+    </div>
+</section>
+            
 </section>
 <!-- Link to javascript -->
 <script src="assets/javascript/home.js"></script>
