reorganize css structure and id class namings

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Link to CSS -->
     <link rel = "stylesheet" type = "text/css" href = "assets/css/portfolio.css">
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/page-structure.css">
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/cubes.css">
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
@@ -17,13 +19,11 @@
 <body>
 
 <section id = "intro-page">
-    <div class = "row" id = "row-nav">
-        <div class = "column" id = "column-nav">
-            <img src = "assets/images/MHlogoBlack.png" id = "MH-logo" alt = "MH logo" width = "60px" height = "30px">
-        </div>
+    <div class = "row logo-row">
+        <img src = "assets/images/MHlogoBlack.png" id = "MH-logo" alt = "MH logo" width = "60px" height = "30px">
     </div>
 
-    <div class = "row" id = "my-name-row">
+    <div class = "row introduction-row" id = "my-name-row">
         <div class = "column" id = "myName-column">
 
         </div>
@@ -48,16 +48,10 @@
         </div>
     </div>
 
-    <div class = "row" id = "contact-row-index">
-        <div class = "column contact">
-            <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
-        </div>
-        <div class = "column contact">
-            <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
-        </div>
-        <div class = "column contact">
-            <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
-        </div>
+    <div class = "row" id = "contact-row-index"> 
+        <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+        <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+        <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" height = "37px" opacity = "0.8"> 
     </div>
     <div class = "row" id = "chat1">
         Let's chat! E-mail: minori.fh@gmail.com
