--- a/work.html
+++ b/work.html
@@ -8,6 +8,7 @@
 
     <!-- Link to CSS -->
     <link rel = "stylesheet" type = "text/css" href = "assets/css/portfolio.css">
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/page-structure.css">
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
@@ -18,32 +19,25 @@
 <section id = "work">
 
 <div class = "row">
-    <div class = "column" id = "projects-column">
-        <div class = "row" id = "project-header-row">
-            <p id = "project-header">&lt PROJECTS /&gt</p>
+    <div class = "column left">
+        <div class = "row left-header-row">
+            <p>&lt PROJECTS /&gt</p>
         </div>
-
-        <div class = "row" id = "contact-row-work">
-            <div class = "column contact">
-                <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
-            </div>
-            <div class = "column contact">
-                <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
-            </div>
-            <div class = "column contact">
-                <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
-            </div>
+        <div class = "row contact-row" id = "contact-row-index">
+            <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+            <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+            <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px"  height = "37px" opacity = "0.8">
         </div>
         <div class = "row" id = "chat2">
             Let's chat! E-mail: minori.fh@gmail.com
         </div>
     </div>
 
-    <div class = "column" id = "description-work">
-        <div class = "row" id = "button-row2">
-            <a href = "index.html"><img src = "assets/images/house.png" id = "home2" class = "house" width = "30px"></a>
+    <div class = "column right">
+        <div class = "row home-row">
+            <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
         </div>
-        <div class = "row" id = "work-categories">
+        <div class = "row" id = "work-label-row">
             <div class = "column">
                 ALL
             </div>
