add functions to count hours of code and cups of coffee

--- a/about-me.html
+++ b/about-me.html
@@ -64,33 +64,35 @@
                 <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
             </div>
             <div class = "row main-text-row" id = "self-description2">
-                Currently: San Francisco <br>
-                Future: pending <br>
-                Move count: 9 <br><br><br><br>
-
-                I've gone through a lot of moves in my life, all of which have shaped me into who I am,
-                and each has led me to a variety of experiences, both personally and professionally! <br><Br>
-
-                I went to college in Boston and graduated with a Bachelors concentrating in finance and marketing.
-                My professional experiences range from working in the food industry to working for a top consulting firm. <br><br>
-
-                I always had a knack for creating things, whether it be CO2 dragsters or logos for companies during internships 
-                (because that gave me more excitement than crunching numbers in the financial statements). 
-                My most current role as an analytics consultant in the tech industry finally gave me the courage to dive into the deep end 
-                what I truly want to do, to *CREATE*! <br><br>
-
-                Current position: student at UC Berkeley Extensions - Full-stack Developer program, 
-                where I've been putting in a lot of hours and cups of coffee...
+                    Currently: San Francisco <br>
+                    Future: pending <br>
+                    Move count: 9 
             </div>
-            <div class = "row">
-                400 hours
-                <img src="assets/images/code.png" width="40px">
+            <div class = "row main-text-row" id = "self-description3">    
+                    I've gone through a lot of moves in my life, all of which have shaped me into who I am
+                    and has led me to a variety of experiences, both personally and professionally. <br><br>
+    
+                    I went to college in Boston and graduated with a Bachelors concentrating in finance and marketing.
+                    My professional experiences range from working in the food industry to working for a top consulting firm. My most current role as an analytics consultant in the tech industry finally gave me the courage to dive into the deep end 
+                    what I truly want to do, to *CREATE*! <br><br>
 
-                100 cups
-                <img src="assets/images/coffeeCup.png" width = "40px">
+                    Current position: student at UC Berkeley Extensions - Full-stack Developer program, 
+                    where I've been putting in a lot of hours coding and drinking cups of coffee...
             </div>
-            <div class = "row" id = "scroll-row1">
-                <img src = "assets/images/scrolldown.png" id = "scroll-down1" width = "50px">
+            <div class = "row" id = "self-description4">
+                <div class = "column">
+                    <img src="assets/images/code.png" width="40px" opacity="0.3">
+                </div>
+                <div class = "column">
+                    <p id = "coding-hrs"></p>
+                </div>
+
+                <div class = "column" id = "coffee-icon">
+                    <img src="assets/images/coffeeCup.png" width = "40px" opacity="0.3">
+                </div>
+                <div class = "column">
+                    <p id = "coffee-cups"></p>
+                </div>
             </div>
         </div>
     </div>
