--- a/work.html
+++ b/work.html
@@ -21,7 +21,11 @@
 <div class = "row">
     <div class = "column left">
         <div class = "row left-header-row">
-            <p>&lt PROJECTS /&gt</p>
+            <p>
+                &lt STACK <br>
+                + <br>
+                PROJECTS /&gt
+            </p>
         </div>
         <div class = "row contact-row" id = "contact-row-index">
             <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
