add event handler to add and remove rotation class

--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
             <div class = "column" id = "front-end-col">
                 <div class = "row tech-row1">
                     <div class = "column">
-                        <img src = "assets/images/stack/html5.png" width = "40px">
+                        <img src = "assets/images/stack/html5.png"  class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         HTML5
@@ -65,7 +65,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/css3.png" width = "40px">
+                        <img src = "assets/images/stack/css3.png" class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         CSS3
@@ -73,7 +73,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/javascript.png" width = "40px">
+                        <img src = "assets/images/stack/javascript.png" class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         Javascript
@@ -81,7 +81,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/jQuery.png" width = "50px">
+                        <img src = "assets/images/stack/jQuery.png" class = "tech-icon" width = "50px">
                     </div>
                     <div class = "column tech-label-col">
                         jQuery
@@ -92,7 +92,7 @@
             <div class = "column" id = "back-end-col">
                 <div class = "row tech-row1">
                     <div class = "column">
-                        <img src = "assets/images/stack/node.png" width = "60px">
+                        <img src = "assets/images/stack/node.png" class = "tech-icon" width = "60px">
                     </div>
                     <div class = "column tech-label-col">
                         NODE
@@ -100,7 +100,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/mySQL.png" width = "50px">
+                        <img src = "assets/images/stack/mySQL.png" class = "tech-icon" width = "50px">
                     </div>
                     <div class = "column tech-label-col">
                         MySQL
@@ -111,7 +111,7 @@
             <div class = "column" id = "frameworks-col">
                 <div class = "row tech-row1">
                     <div class = "column">
-                        <img src = "assets/images/stack/firebase.png" width = "40px">
+                        <img src = "assets/images/stack/firebase.png" class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         Firebase
@@ -119,7 +119,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/npm.png" width = "40px">
+                        <img src = "assets/images/stack/npm.png" class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         Node Package Manager
@@ -127,7 +127,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/git.png" width = "50px">
+                        <img src = "assets/images/stack/git.png" class = "tech-icon" width = "50px">
                     </div>
                     <div class = "column tech-label-col">
                         Git
@@ -135,7 +135,7 @@
                 </div>
                 <div class = "row tech-row">
                     <div class = "column">
-                        <img src = "assets/images/stack/bootstrap.png" width = "40px">
+                        <img src = "assets/images/stack/bootstrap.png" class = "tech-icon" width = "40px">
                     </div>
                     <div class = "column tech-label-col">
                         Bootstrap
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class = "row" id = "scroll-row2">
-            <img src = "assets/images/scrolldown.png" id = "scroll-down2" width = "50px">
+            <img src = "assets/images/scrolldown.png" id = "scroll-down2" class = "tech-icon" width = "50px">
         </div>
     </div>
 </div>
