remove tech class icon from scroll image

--- a/work.html
+++ b/work.html
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class = "row" id = "scroll-row2">
-            <img src = "assets/images/scrolldown.png" id = "scroll-down2" class = "tech-icon" width = "50px">
+            <img src = "assets/images/scrolldown.png" id = "scroll-down2" width = "50px">
         </div>
     </div>
 </div>
