change button images on work about me page and add animation for width

--- a/about-me.html
+++ b/about-me.html
@@ -19,6 +19,22 @@
 <section id = "about-me">
     <div class = "row">
         <div class = "column left">
+            <div class = "row menu-row">
+                <div class = "column menu-row-col menu-home">
+                    <a href = "index.html" ><img src = "assets/images/home.png" width = "35px"></a> 
+                </div>
+                <div class = "column home-icon-label">
+                    
+                </div>
+            </div>
+            <div class = "row menu-row">
+                <div class = "column menu-row-col menu-work">
+                    <a href = "work.html" ><img src = "assets/images/code.png" width = "35px"></a> 
+                </div>
+                <div class = "column work-icon-label">
+                    
+                </div>
+            </div>
             <div class = "row left-header-row">
                 <p> &lt ABOUT ME /&gt</p>
             </div>
@@ -37,9 +53,6 @@
             </div>
         </div>
         <div class = "column right">
-            <div class = "row home-row">
-                <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
-            </div>
             <div class = "row main-text-row" id = "self-description1">
                 Hi, my name is Minori. <br>
                 I'm a consultant turned full-stack developer! <br><br>
@@ -60,9 +73,6 @@
 
         </div>
         <div class = "column right">
-            <div class = "row home-row">
-                <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
-            </div>
             <div class = "row main-text-row" id = "self-description2">
                     Currently: San Francisco <br>
                     Future: pending <br>
@@ -81,7 +91,7 @@
             </div>
             <div class = "row" id = "self-description4">
                 <div class = "column">
-                    <img src="assets/images/code.png" width="40px" opacity="0.3">
+                    <img src="assets/images/codehrs.png" width="40px" opacity="0.3">
                 </div>
                 <div class = "column">
                     <p id = "coding-hrs"></p>
