--- a/work.html
+++ b/work.html
@@ -20,7 +20,23 @@
 
 <div class = "row">
     <div class = "column left">
-        <div class = "row left-header-row">
+        <div class = "row menu-row">
+            <div class = "column menu-row-col menu-home">
+                <a href = "index.html" ><img src = "assets/images/home.png" width = "35px"></a> 
+            </div>
+            <div class = "column home-icon-label">
+                    
+            </div>
+        </div>
+        <div class = "row menu-row">
+            <div class = "column menu-row-col menu-about">
+                <a href = "about-me.html" ><img src = "assets/images/aboutme.png" width = "35px"></a> 
+            </div>
+            <div class = "column about-icon-label">
+                    
+            </div>
+        </div>
+        <div class = "row left-header-row" id = "work-header-row">
             <p>
                 &lt STACK <br>
                 + <br>
@@ -38,9 +54,6 @@
     </div>
 
     <div class = "column right">
-        <div class = "row home-row">
-                <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
-        </div>
         <div class = "row" id = "stack-label-row">
             <div class = "column">
                 FRONT-END
@@ -157,9 +170,6 @@
         </div>
 
         <div class = "column right">
-            <div class = "row home-row">
-                <a href = "index.html"><img src = "assets/images/house.png" width = "30px"></a>
-            </div>
             <div class = "row" id = "work-label-row">
                 <div class = "column">
                     ALL
@@ -262,5 +272,6 @@
 </section>
 <!-- Link to javascript -->
 <script src="assets/javascript/work.js"></script>  
+<script src="assets/javascript/about-me.js"></script>  
 </body>
 </html>
