add magical underline javascript and css

--- a/about-me.html
+++ b/about-me.html
@@ -21,7 +21,7 @@
         <div class = "column left">
             <div class = "row menu-row">
                 <div class = "column menu-row-col menu-home">
-                    <a href = "index.html" ><img src = "assets/images/home.png" width = "35px"></a> 
+                    <a href = "index.html" ><img src = "assets/images/home.png" class = "go-home" width = "35px"></a> 
                 </div>
                 <div class = "column home-icon-label">
                     
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class = "row left-header-row">
-                <p> &lt ABOUT ME /&gt</p>
+                <p> &lt <span class = "underline-magical">ABOUT ME</span> /&gt</p>
             </div>
 
             <div class = "row" id = "propic-row">
@@ -55,7 +55,7 @@
         <div class = "column right">
             <div class = "row main-text-row" id = "self-description1">
                 Hi, my name is Minori. <br>
-                I'm a consultant turned full-stack developer! <br><br>
+                I'm a consultant turned full-stack developer!<br><br>
     
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
@@ -93,14 +93,14 @@
                 <div class = "column">
                     <img src="assets/images/codehrs.png" width="40px" opacity="0.3">
                 </div>
-                <div class = "column">
+                <div class = "column" id = "codinghrs-col">
                     <p id = "coding-hrs"></p>
                 </div>
 
                 <div class = "column" id = "coffee-icon">
                     <img src="assets/images/coffeeCup.png" width = "40px" opacity="0.3">
                 </div>
-                <div class = "column">
+                <div class = "column" id = "coffeecups-col">
                     <p id = "coffee-cups"></p>
                 </div>
             </div>
