--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
     <div class = "column left">
         <div class = "row menu-row">
             <div class = "column menu-row-col menu-home">
-                <a href = "index.html" ><img src = "assets/images/home.png" width = "35px"></a> 
+                <a href = "index.html" ><img src = "assets/images/home.png" class = "go-home" width = "35px"></a> 
             </div>
             <div class = "column home-icon-label">
                     
@@ -38,9 +38,9 @@
         </div>
         <div class = "row left-header-row" id = "work-header-row">
             <p>
-                &lt STACK <br>
+                &lt <span class = "underline-magical">STACK</span><br>
                 + <br>
-                PROJECTS /&gt
+                <span class = "underline-magical">PROJECTS</span> /&gt
             </p>
         </div>
         <div class = "row contact-row" id = "contact-row-index">
@@ -271,7 +271,7 @@
     </div>
 </section>
 <!-- Link to javascript -->
-<script src="assets/javascript/work.js"></script>  
-<script src="assets/javascript/about-me.js"></script>  
+<script src="assets/javascript/work.js"></script>    
+<script src="assets/javascript/home.js"></script>  
 </body>
 </html>
