link about me js in work html

--- a/work.html
+++ b/work.html
@@ -273,5 +273,6 @@
 <!-- Link to javascript -->
 <script src="assets/javascript/work.js"></script>    
 <script src="assets/javascript/home.js"></script>  
+<script src="assets/javascript/about-me.js"></script> 
 </body>
 </html>
