add new font and edit googleFonts link in html headers

--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -53,11 +53,14 @@
             </div>
         </div>
         <div class = "column right">
-            <div class = "row main-text-row" id = "self-description1">
-                Hi, my name is Minori. <br>
-                I'm a consultant turned full-stack developer!<br><br>
-    
-                Minesweeper addict, cafe enthusiast, and inquisitive learner. 
+            <div>
+                <div class = "row main-text-row" id = "self-description1">
+                    Hi, my name is Minori. <br>
+                    I'm a consultant turned full-stack developer!<br><br>
+                </div>
+                <div id = "array">
+                    [minesweeper addict, cafe enthusiast, inquisitive learner, future dog mom] 
+                </div>
             </div>
             <div class = "row" id = "scroll-row1">
                 <img src = "assets/images/scrolldown.png" id = "scroll-down1" width = "50px">
