--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
     
 </head>
 <body>
