add reset.css and make edits to margins where necessary

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel = "stylesheet" type = "text/css" href = "assets/css/portfolio.css">
     <link rel = "stylesheet" type = "text/css" href = "assets/css/page-structure.css">
     <link rel = "stylesheet" type = "text/css" href = "assets/css/cubes.css">
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/reset.css">
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
