add labels to scroll row

--- a/about-me.html
+++ b/about-me.html
@@ -65,6 +65,9 @@
                     [minesweeper addict, cafe enthusiast, inquisitive learner, future dog mom] 
                 </div>
             </div>
+            <div class = "row scroll-row-label">
+                <p>more about me...</p>
+            </div>
             <div class = "row" id = "scroll-row1">
                 <img src = "assets/images/scrolldown.png" id = "scroll-down1" width = "50px">
             </div>
