--- a/work.html
+++ b/work.html
@@ -159,6 +159,9 @@
                 </div>
             </div>
         </div>
+        <div class = "row scroll-row-label">
+            <p>projects</p>
+        </div>
         <div class = "row" id = "scroll-row2">
             <img src = "assets/images/scrolldown.png" id = "scroll-down2" width = "50px">
         </div>
