create folder structure in images folder to organize images and gifs

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
                 <p id = "about-me-link"><strong>ABOUT ME</strong></p>
-                <img id = "background-image1" src = "assets/images/smokey.gif">
+                <img id = "background-image1" src = "assets/images/cube-gifs/smokey.gif">
             </div>
             <div class = "column cube" id = "cube-2" cube-value = "2">
                 <p id = "work-link"><strong>WORK</strong></p>
-                <img id = "background-image2" src = "assets/images/rainbow.gif">
+                <img id = "background-image2" src = "assets/images/cube-gifs/rainbow.gif">
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
                 <p id = "scroll-arrow2">← scroll</p>
@@ -50,9 +50,9 @@
     </div>
 
     <div class = "row" id = "contact-row-index"> 
-        <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
-        <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
-        <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" height = "37px" opacity = "0.8"> 
+        <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/contact-icons/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+        <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/contact-icons/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+        <img src = "assets/images/contact-icons/mailIcon.png" class = "mail-icon" width = "40px" height = "37px" opacity = "0.8"> 
     </div>
     <div class = "row" id = "chat1">
         Let's chat! E-mail: minori.fh@gmail.com
