--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
     <div class = "column left">
         <div class = "row menu-row">
             <div class = "column menu-row-col menu-home">
-                <a href = "index.html" ><img src = "assets/images/home.png" class = "go-home" width = "35px"></a> 
+                <a href = "index.html" ><img src = "assets/images/menu-icons/home.png" class = "go-home" width = "35px"></a> 
             </div>
             <div class = "column home-icon-label">
                     
@@ -31,7 +31,7 @@
         </div>
         <div class = "row menu-row">
             <div class = "column menu-row-col menu-about">
-                <a href = "about-me.html" ><img src = "assets/images/aboutme.png" width = "35px"></a> 
+                <a href = "about-me.html" ><img src = "assets/images/menu-icons/aboutme.png" width = "35px"></a> 
             </div>
             <div class = "column about-icon-label">
                     
@@ -46,9 +46,9 @@
                 </p>
             </div>
             <div class = "row contact-row">
-                <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
-                <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
-                <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px"  height = "37px" opacity = "0.8">
+                <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/contact-icons/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+                <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/contact-icons/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+                <img src = "assets/images/contact-icons/mailIcon.png" class = "mail-icon" width = "40px"  height = "37px" opacity = "0.8">
             </div>
             <div class = "row" id = "chat2">
                 Let's chat! E-mail: minori.fh@gmail.com
@@ -197,7 +197,7 @@
                 </div>
                 <div class = "column project" id = "hangman-col">
                     <div id = "hangman-image" style = "position: relative;">
-                        <img src = "assets/images/hangman.png" id = "hangman" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/hangman.png" id = "hangman" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 5px;">
                             <p>HANGMAN</p>
                             <p>javascript</p>
@@ -208,7 +208,7 @@
                 </div>
                 <div class = "column project" id = "expressflix-col">
                     <div style = "position: relative;">
-                        <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/expressflix.png" id = "expressflix" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 5px;">
                             <p>EXPRESSFLIX</p>
                             <p>javascript+AJAX</p>
@@ -219,7 +219,7 @@
                 </div>
                 <div class = "column project" id = "polytopia-col">
                     <div style = "position: relative;">
-                        <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/polytopia.png" id = "polytopia" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 5px;">
                             <p>POLYTOPIA</p>
                             <p>javascript</p>
@@ -239,7 +239,7 @@
                 </div>
                 <div class = "column project" id = "sip-col">
                     <div style = "position: relative;">
-                        <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/sip.png" id = "sip" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 5px;">
                             <p>SIP</p>
                             <p>javascript+Firebase+AJAX</p>
@@ -250,7 +250,7 @@
                 </div>
                 <div class = "column project" id = "trivia-col">
                     <div style = "position: relative;">
-                        <img src = "assets/images/trivia.png" id = "trivia" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/trivia.png" id = "trivia" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "trivia-links" style = "position: absolute; top: 5px;">
                             <p>TRIVIA</p>
                             <p>javascript+timers</p>
@@ -261,7 +261,7 @@
                 </div>
                 <div class = "column project" id = "liri-col">
                     <div style = "position: relative;">
-                        <img src = "assets/images/liri.png" id = "liri" width = "300px" height = "175px">
+                        <img src = "assets/images/project-pictures/liri.png" id = "liri" width = "300px" height = "175px">
                         <div  class = "column project-subtitle" id = "liri-links" style = "position: absolute; top: 5px;">
                             <p>LIRI NODE APP</p>
                             <p>node</p>
