remove flex row/column class around text and add span

--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -57,9 +57,9 @@
         </div>
         <div class = "column right">
             <div>
-                <div class = "row main-text-row" id = "self-description1">
-                    Hi, my name is Minori. <br>
-                    I'm a consultant turned full-stack developer!<br><br>
+                <div class = "main-text-row" id = "self-description1">
+                    Hi, my name is <span id = "description-name">Minori</span>. <br>
+                    I'm a consultant turned <span class = "underline-magical">full-stack</span> developer!<br><br>
                 </div>
                 <div id = "array">
                     [minesweeper addict, cafe enthusiast, inquisitive learner, future dog mom] 
@@ -82,12 +82,12 @@
 
         </div>
         <div class = "column right">
-            <div class = "row main-text-row" id = "self-description2">
+            <div class = "main-text-row" id = "self-description2">
                     Currently: San Francisco <br>
                     Future: pending <br>
                     Move count: 9 
             </div>
-            <div class = "row main-text-row" id = "self-description3">    
+            <div class = "main-text-row" id = "self-description3">    
                     I've gone through a lot of moves in my life, all of which have shaped me into who I am
                     and has led me to a variety of experiences, both personally and professionally. <br><br>
     
