add new icons for second about me page

--- a/about-me.html
+++ b/about-me.html
@@ -83,9 +83,9 @@
         </div>
         <div class = "column right">
             <div class = "main-text-row" id = "self-description2">
-                    Currently: San Francisco <br>
-                    Future: pending <br>
-                    Move count: 9 
+                    Currently: <img src = "assets/images/mapMarker.png" width = "28px">San Francisco <br>
+                    Future: <img src = "assets/images/pending.png" width = "35px" style= "vertical-align:middle">pending <br>
+                    Move count: <img src = "assets/images/plan2.gif" width = "28px" style= "vertical-align:middle"> 9 
             </div>
             <div class = "main-text-row" id = "self-description3">    
                     I've gone through a lot of moves in my life, all of which have shaped me into who I am
